--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <ul>Mate Academy</ul>
-  
+  <header></header>
+  <main></main>
+  <footer></footer>
 </body>
 </html>
