--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <header></header>
+  <header>Header
+  </header>
   <main></main>
   <footer>Footer</footer>
 </body>
