--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header>Header
   </header>
-  <main></main>
-  <footer>Footer booter</footer>
+  <main>MAIN</main>
+  <footer>Footer booter!</footer>
   1
   2
   3
