new text footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>Header
   </header>
   <main>MAIN</main>
-  <footer>Footer booter!</footer>
+  <footer>Footer boor!</footer>
   1
   2
   3
